# itu-01-algorithm-design

./: .gitignore  pyproject.toml
assignment_00/A/: main.py  test_main.py
assignment_00/B/: main.py  test_main.py
assignment_00/C/: everywhere-02.in  main.py  test_main.py
assignment_01/A/: 01.ans  02.ans  02.in  03.ans  05.in  06.in  07.in  08.ans  08.in  09.in  10.ans  10.in  main.py  test_main.py
